# FlatProt

./: .cursorrules  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FlatProt.code-workspace  LICENSE  Makefile  README.md  changes.csv  index.html  make.bat  mkdocs.yml  objects.inv  pyproject.toml  readMe.md  releaserc.toml  requirements.txt  search.html  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  generate_notebooks.yml  pytest.yml  python.yml  release-docs.yml  release-python.yml  release.yml  semantic_release_tag.yml
FlatProt/: Classes.py  Main_functions.py  Structure_Database.py  __init__.py  cli.py  main.py  pymol_orient.py  utils.py
api/alignment/: index.html
api/core/: index.html
api/io/: index.html
api/rendering/: index.html
api/scene/: index.html
api/transformation/: index.html
commands/align/: index.html
commands/overlay/: index.html
commands/project/: index.html
commands/split/: index.html
data/: human_proteome.tsv
data/1KT0/: 1kt0-chainsaw-domains.tsv  1kt0.cif
data/3Ftx/: 3Ftx_dataSet.fasta  cobra.cif  krait.cif  snake.cif
data/flexUSER_database/: db_info.tsv
database_builder/: index.html
db_builder/: clean_failed_pdbs.py  clean_pipeline.py  config.yaml  create_alignment_db.py  db_create.py  domain_extract.py  domain_report.py  domain_select.py  make.smk  pdb_download.py  pdb_download_report.py  pdb_extract_domain.py  pdb_report.py  representative_domain.py  scop_parse.py  snakefile
docs/: cli.md  database_builder.md  examples.md  functions.doctree  functions.html  index.html  index.md  installation.md  objects.inv  searchindex.js
docs/_sources/: index.rst.txt
docs/api/: alignment.md  core.md  io.md  rendering.md  scene.md  transformation.md
docs/commands/: align.md  overlay.md  project.md  split.md
docs/file_formats/: annotations.md  dssp.md  matrix.md  structure.md  style.md
docs/source/: conf.py  functions.rst
docs/tools/: custom_database.md  matrix_extraction.md
examples/: 3ftx_alignment.ipynb  3ftx_alignment.py  3ftx_alingnment.ipynb  annotation.ipynb  annotations.ipynb  annotations.py  annotations.toml  basic_structure.py  chainsaw.ipynb  chainsaw.py  colab_setup.py  custom_styling.ipynb  custom_styling.py  disulfide.ipynb  disulfide.py  dysulfide.ipynb  dysulfide.py  index.html  klk_overlay.ipynb  klk_overlay.py  overlay.ipynb  overlay.py  project.ipynb  project.py  project_align.ipynb  project_align.py  runtime.ipynb  runtime.py  split.ipynb  split.py  style.toml  test_viz.py  uniprot_alphafold.ipynb  uniprot_alphafold.py  uniprot_projection.ipynb  uniprot_projection.py
file_formats/annotations/: index.html
file_formats/dssp/: index.html
file_formats/matrix/: index.html
file_formats/structure/: index.html
file_formats/style/: index.html
installation/: index.html
old/: Main_functions.py  Structure_Database.py  utils.py
prot2d/: Classes.py  Graphical.py  Main_functions.py  Structure_Database.py  __init__.py  cli.py  main.py  utils.py
prot2d/SF_database/: db_info.tsv
scripts/: benchmark_visualization_tools.sh  benchmark_visualizers.py  create-notebooks.sh  create_alignment_database.py  create_custom_database.py  export_overlay.py  export_structure.py  filesize_benchmark_plot.py  generate_single_viz_tools.py  get_matrix.py  hydrophobic_gradient_viz.py  icn3d_benchmark.ipynb  release-needed.sh  release_needed.sh  runtime_benchmark.py  runtime_benchmark_plot.py  runtime_benchmark_setup.py  runtime_plot.py  tool_benchmark.py  tool_benchmark_table.py
scripts/benchmark/: chimerax_family.py  chimerax_single.py  icn3d_single.py  proorigami_single.py  pymol_family.py  pymol_single.py
scripts/tool_benchmark/: Dockerfile.proorigami  chimerax_family.py  flatprot_aligned.py  (+4 more)
search/: search_index.json
tests/: __init__.py  test_coord_calculations.py  test_foldseek.py  test_orthographic.py  test_projectors.py  test_scene_system.py  test_structure_parser.py  test_transformations.py  test_viz_utils.py
(+214 files in other folders)
