[tool.poetry]
name = "FlatProt"
version = "0.1.6"
description = "Python package for creating simplified 2D protein visualisations. Specialised on showing differences and similaritys between proteins from the same protein family."
authors = ["constantincarl <ge37goy@mytum.de>"]
readme = "README.md"
license = "Apache-2.0"

include = ["FlatProt/SF_database/*","FlatProt/flexUSER_database/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
biopython = "^1.81"
networkx = "^3.2"
svgwrite = "^1.4.3"
shapely = "^2.0.2"
tqdm = "^4.66.1"
colour = "^0.1.5"
scipy = "^1.11.3"
pandas = "^2.1.3"
anytree = "^2.12.1"
wget = "^3.2"
alphashape = "^1.3.1"
matplotlib = "^3.8.2"
typer = "^0.9.0"
sphinx = "^8.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
FlatProt = "FlatProt.cli:app"

[tool.poetry.urls]
Repository = "https://github.com/ConstantinCarl/FlatProt"
Documentation = "https://constantincarl.github.io/FlatProt/"
Zenodo = "https://doi.org/10.5281/zenodo.10674045"
Example-Collab = "https://colab.research.google.com/drive/17u0twE81kYYspNFsdXUHrCyP33hj0dO6?usp=sharing"