[project]
name = "FlatProt"
version = "0.1.0"
description = "Python package for creating simplified 2D protein visualizations. Specialized on showing differences and similarities between proteins of the same protein family."
readme = "README.md"
license = "Apache-2.0"

authors = [
    { name = "Tobias O", email = "tobias.olenyi@tum.de" },
    { name = "Constantin C", email = "ge37goy@mytum.de" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alphashape>=1.3.1",
    "anytree>=2.12.1",
    "colour>=0.1.5",
    "drawsvg>=2.4.0",
    "gemmi>=0.7.0",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "polars>=1.17.1",
    "pydantic-extra-types>=2.10.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "wget>=3.2",
    "h5py>=3.12.1",
]

[project.scripts]
flatprot = "flatprot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab>=4.3.2", "mkdocs>=1.6.1", "pytest>=8.3.4"]

[project.urls]
Repository = "https://github.com/ConstantinCarl/FlatProt"
Documentation = "https://constantincarl.github.io/FlatProt/"
Zenodo = "https://doi.org/10.5281/zenodo.10674045"
Example-Collab = "https://colab.research.google.com/drive/17u0twE81kYYspNFsdXUHrCyP33hj0dO6?usp=sharing"
